--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -517,19 +517,16 @@
 /* adult content */
 #cliqz-popup .cqz-message-bar {
     line-height: 0;
-    padding: 10px 50px 10px 20px;
-    text-align: left;
-    color: #fff;
-    font-size: 20px;
-    background: #43bdd9;
-}
-#cliqz-popup .cqz-message-bar > * {
-    display: inline-block;
-    vertical-align: top;
+    padding: 4px 10px;
+    text-align: justify;
     white-space: normal;
+    color: #c3043e;
+    border-top: 1px solid #d7d5a8;
+    background: #fffee6;
 }
+#cliqz-popup .cqz-message-bar > * { margin-top: 8px; vertical-align: top; display: inline-block }
 #cliqz-popup .cqz-message-bar img { height: 16px; }
-#cliqz-popup .cqz-message { }
+#cliqz-popup .cqz-message { padding: 2px 20px 2px; margin-top: 8px; display: inline-block; }
 #cliqz-popup .cqz-message-success { color: #28ae2b; }
 #cliqz-popup .cqz-message-warning { color: #ffcc66; }
 #cliqz-popup .cqz-message-alert {
