--- a/cliqz@cliqz.com/chrome/skin/browser_progress.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_progress.css
@@ -645,7 +645,8 @@
 #cliqz-results .movie_container {
   height:160px;
   max-height:160px;
-  max-width: 800px;
+  width: calc(100% - 35px);
+  max-width: 700px;
 }
 
 #cliqz-results .movie_poster, #cliqz-results .movie_poster_img {
