--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -515,7 +515,14 @@
 #cliqz-popup .cqz-btn-gray { background-color: #eaeaea; color: #333333; }
 
 /* adult content */
-#cliqz-popup .cqz-message-bar { padding: 4px 10px; text-align: justify; white-space: normal; line-height: 0; background: #fefefe; }
+#cliqz-popup .cqz-message-bar {
+    padding: 4px 10px;
+    text-align: justify;
+    white-space: normal;
+    line-height: 0;
+    border-top: 1px solid #ccc;
+    background: #fcfcfc;
+}
 #cliqz-popup .cqz-message-bar > * { margin-top: 8px; vertical-align: top; display: inline-block }
 #cliqz-popup .cqz-message-bar img { height: 16px; }
 #cliqz-popup .cqz-message { padding: 2px 20px 2px; margin-top: 8px; display: inline-block; }
