--- a/cliqz@cliqz.com/chrome/skin/theme.css
+++ b/cliqz@cliqz.com/chrome/skin/theme.css
@@ -59,8 +59,65 @@ window:not([chromehidden~="toolbar"]) #urlbar-wrapper {
   background-image: none !important;
   background-color: #eee !important;
 }
+/*======= Gabriel Changes */
 
 #urlbar {
-  border-radius: 0px !important;
+  box-sizing: border-box;
+  border-radius: 3px !important;
+  background: #fefefe;
+  box-shadow: none !important;
+  border: 1px solid #ccc !important;
+  -moz-border-start: 1px solid #ccc !important;
+}
+#urlbar * { box-sizing: border-box; }
+
+#urlbar[focused="true"],
+.searchbar-textbox[focused="true"] {
+  box-shadow: none !important;
+  border-color: #5ea3f9 !important;
+  -moz-border-start: 1px solid #5ea3f9 !important;
 }
 
+/*==== FF Color */
+
+#titlebar,
+#tab-view-deck,
+#titlebar-content {
+  background: #eaeaea;
+}
+
+.tab-content {
+  border: none;
+  background: rgba(255,255,255,0.6) !important;
+}
+
+.tabbrowser-tab[visuallyselected="true"] .tab-content,
+#PersonalToolbar {
+  background: #fff !important;
+}
+
+#nav-bar {
+  margin-top: 0 !important;
+  border-top-color: #fff !important;
+  background: #fff !important;
+}
+
+.tabs-newtab-button {
+  border: none !important;
+}
+
+.tabs-newtab-button,
+#TabsToolbar > #new-tab-button,
+#TabsToolbar > toolbarpaletteitem > #new-tab-button {
+  list-style-image: url("chrome://cliqzres/content/skin/images/browser/newtab.png");
+  -moz-image-region: rect(0px, 19px, 20px, 1px);
+}
+.tabs-newtab-button:hover,
+#TabsToolbar > #new-tab-button:hover {
+  -moz-image-region: rect(0px, 37px, 20px, 20px);
+}
+
+.tabs-newtab-button:hover:active,
+#TabsToolbar > #new-tab-button:hover:active {
+  -moz-image-region: rect(0px, 56px, 20px, 39px);
+}
