DD-9 cleaning up

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -674,6 +674,7 @@
 }
 
 #cliqz-popup .cqz-analog-clock .clock .hand-second {
+    display: none;
     width: 17px;
     height: 1px;
     background: #d7011d;
