Mobile cards experiment first draft. Deactivated most templates for now.

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,9 +4,8 @@ html
         title developer tool
         link(rel="icon",href="/tool/skin/cliqz.png",type="image/x-icon")
         link(href="/views/css/style.css",rel="stylesheet",type="text/css")
-        link(href="/generic/static/skin/brands.css",rel="stylesheet",type="text/css")
-        link(href="/generic/static/skin/browser.css",rel="stylesheet",type="text/css")
-        link(href="/generic/static/skin/browser_progress.css",rel="stylesheet",type="text/css")
+        link(href="/generic/static/skin/mobile/style-slide.css",rel="stylesheet",type="text/css")
+        meta(name="viewport",content="width=device-width, initial-scale=1")
         script(src="//localhost:3001/livereload.js")
         script(src="/tool/js/libs.js")
         script(src="/views/js/environment.js")
@@ -14,5 +13,6 @@ html
         script(src="/tool/js/local.js")
     body
         input#urlbar(autofocus="true")
-        #results
+        #results.wrapper
+            .content
         script(src="/views/js/debug.js")
