--- a/generic/static/skin/mobile/style-slide.css
+++ b/generic/static/skin/mobile/style-slide.css
@@ -45,14 +45,11 @@ body, html {
     bottom: 16px; }
 
 .frame {
-  background-color: #fff;
   position: absolute;
   top: 0;
   left: 0;
   bottom: 0;
-  width: 100%;
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
-  border-radius: 4px; }
+  width: 100%; }
 
 .phoneui {
   background-color: red;
@@ -99,7 +96,16 @@ body, html {
   text-align: center; }
 
 .ez, .rr {
-  padding: 16px 16px 8px; }
+  padding: 16px 16px 8px;
+  top: 16px;
+  left: 16px;
+  right: 16px;
+  bottom: 16px;
+  border: 1px #ccc solid;
+  background-color: #fff;
+  border-radius: 4px;
+  position: absolute;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.5); }
   .ez::after, .rr::after {
     clear: both;
     content: "";
@@ -440,7 +446,9 @@ a {
   align-content: stretch;
   -ms-flex-line-pack: stretch;
   border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px; }
+  border-bottom-right-radius: 4px;
+  overflow: hidden;
+  height: 48px; }
   .cta li {
     list-style-type: none;
     -webkit-box-flex: 1;
