--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,7 @@ html
         link(rel="icon",href="/tool/skin/cliqz.png",type="image/x-icon")
         link(href="/views/css/style.css",rel="stylesheet",type="text/css")
         link(href="/generic/static/skin/mobile/style-slide.css",rel="stylesheet",type="text/css")
-        meta(name="viewport",content="width=device-width, initial-scale=1")
+        meta(name="viewport",content="width=device-width, user-scalable=no, initial-scale=1")
         script(src="//localhost:3001/livereload.js")
         script(src="/tool/js/libs.js")
         script(src="/views/js/environment.js")
