--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -228,7 +228,7 @@
 }
 
 /* EZ generic */
-#cliqz-results .cqz-ez-title { font-size: 18px; display: block; margin-bottom: 5px; }
+#cliqz-results .cqz-ez-title { font-size: 18px; display: block; margin-bottom: 5px; max-width: 600px; }
 #cliqz-results .cqz-ez-title a { font-size: 18px; cursor: pointer; }
 #cliqz-results .cqz-ez-title::after, #cliqz-results .cqz-ez-title .after {
     display: inline-block;
@@ -296,8 +296,8 @@
 #cliqz-results .cqz-ez-banking-elems { margin-top: 10px; }
 
 /* ez news, video, portal */
-#cliqz-results .entity-stories { margin-left: -22px; padding-right: 75px; height: 200px; margin-bottom: 20px;}
-#cliqz-results .entity-story { position: relative; height: 60px; padding: 0px 0 10px 22px; max-width: 520px; }
+#cliqz-results .entity-stories { margin-left: -22px; padding-right: 75px; height: 200px; margin-bottom: 25px;}
+#cliqz-results .entity-story { position: relative; height: 60px; padding: 0px 0 10px 22px; max-width: 600px; }
 #cliqz-results .entity-story * {  cursor: pointer; }
 #cliqz-results .entity-story-image {
     position: relative;
@@ -319,7 +319,7 @@
 #cliqz-results .entity-story-description { padding-left: 20px; }
 #cliqz-results .entity-story-title { padding-top: 4px; max-width: 550px; }
 #cliqz-results .entity-story-title a { font-size: 18px; }
-#cliqz-results .entity-story-comment { color: #d7011d; padding-top: 9px; }
+#cliqz-results .entity-story-comment { color: #c3043e; padding-top: 9px; }
 
 /* ez video specials */
 #cliqz-results .ez-video .entity-story-comment { color: #333333; padding-top: 4px; }
