--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -618,16 +618,21 @@
     transition: 0.3s all;
     vertical-align: middle;
 }
-/*#cliqz-popup .cqz-message-btns .cqz-msg-btn.cqz-msg-btn-default { background: red; }*/
 #cliqz-popup .cqz-message-btns .cqz-msg-btn:last-child { margin-right: 0; }
 #cliqz-popup .cqz-message-btns .cqz-msg-btn:hover { color: #3bb5d4; background: #fff; }
 #cliqz-popup .cqz-message-bar.cqz-message-alert .cqz-msg-btn:hover { color: #7a2354; }
+
+#cliqz-popup .cqz-message-bar.cqz-message-survey .cqz-msg-btn.cqz-msg-btn-default { background: #FF951D; border-color: #FF951D;}
+#cliqz-popup .cqz-message-bar.cqz-message-survey .cqz-msg-btn.cqz-msg-btn-default:hover { background: #fff; border-color: #fff; color: #43BDD9; }
+#cliqz-popup .cqz-message-bar.cqz-message-survey .cqz-msg-btn.cqz-msg-btn-gray { background: #43BDD9; }
+#cliqz-popup .cqz-message-bar.cqz-message-survey .cqz-msg-btn.cqz-msg-btn-gray:hover { background: #fff; color: #43BDD9; }
 
 #cliqz-popup .cqz-message-success { color: #28ae2b; }
 #cliqz-popup .cqz-message-warning { color: #ffcc66; }
 
 
 #cliqz-popup .cqz-message-bar.cqz-message-alert { background: #7a2354; }
+#cliqz-popup .cqz-message-bar.cqz-message-survey { background: #43BDD9; }
 
 /*======= Time Clock =======*/
 #cliqz-popup .ez-type-time > .cqz-result-holder .answer {
