MIS-74 max-width change

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -297,7 +297,7 @@
 
 /* ez news, video, portal */
 #cliqz-results .entity-stories { margin-left: -22px; padding-right: 75px; height: 200px; margin-bottom: 25px;}
-#cliqz-results .entity-story { position: relative; height: 60px; padding: 0px 0 10px 22px; max-width: 600px; }
+#cliqz-results .entity-story { position: relative; height: 60px; padding: 0px 0 10px 22px; }
 #cliqz-results .entity-story * {  cursor: pointer; }
 #cliqz-results .entity-story-image {
     position: relative;
@@ -316,7 +316,9 @@
     font-size: 12px;
     padding: 5px;
 }
-#cliqz-results .entity-story-description { padding-left: 20px; }
+#cliqz-results .entity-story-image + .entity-story-description { padding-left: 20px; max-width: 540px; }
+
+#cliqz-results .entity-story-description { max-width: 600px; }
 #cliqz-results .entity-story-title { padding-top: 4px; max-width: 550px; }
 #cliqz-results .entity-story-title a { font-size: 18px; }
 #cliqz-results .entity-story-comment { color: #c3043e; padding-top: 9px; }
