--- a/cliqz@cliqz.com/chrome/skin/browser_progress.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_progress.css
@@ -145,8 +145,14 @@
 #cliqz-results .ez-liga-genSM-1line {line-height: 20px}
 #cliqz-results .ez-liga-genSM-Loc {color: #999999}
 #cliqz-results .ez-liga-genSM  .ez-liga-teamName{color: #506bb8;}
-#cliqz-results .ez-liga-genSM-game-box {border:1px solid #CCCCCC; margin: 20px 0px 0px 20px;
-    padding: 20px 20px 20px 20px; height: 105px; position: relative; width: 100%; max-width:500px;}
+#cliqz-results .ez-liga-genSM-game-box {
+    position: relative;
+    max-width: 500px;
+    width: 100%;
+    height: 105px;
+    margin: 20px 0px 0px 20px;
+    padding: 20px 20px 20px 20px;
+}
 #cliqz-results .ez-liga-genSM-game-box_live {border-color: #56EAC6; }
 #cliqz-results .ez-liga-genSM-game-box .ez-liga-oneGameScore{position: absolute; top: 85px; width: -moz-calc(100% - 10px); width: calc(100% - 10px);}
 #cliqz-results .ez-liga-genSM-vs{font-size: 18px;}
