Re-add desktop CSS styles

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,6 +4,7 @@ html
         title developer tool
         link(rel="icon",href="/tool/skin/cliqz.png",type="image/x-icon")
         link(href="/views/css/style.css",rel="stylesheet",type="text/css")
+        link(href="/views/css/style-desktop.css",rel="stylesheet",type="text/css")
         link(href="/generic/static/skin/brands.css",rel="stylesheet",type="text/css")
         link(href="/generic/static/skin/browser.css",rel="stylesheet",type="text/css")
         link(href="/generic/static/skin/browser_progress.css",rel="stylesheet",type="text/css")
