--- a/views/mobile.jade
+++ b/views/mobile.jade
@@ -17,4 +17,4 @@ html
         input#urlbar(autofocus="true")
         #results.wrapper
             .content
-        script(src="/views/js/debug.js")
+        script(src="/views/js/debugmobile.js")
