--- a/cliqz@cliqz.com/chrome/skin/theme.css
+++ b/cliqz@cliqz.com/chrome/skin/theme.css
@@ -1,85 +1,100 @@
-#main-window:not([chromehidden~="toolbar"]) { min-width: 803px;}
-#urlbar-container { min-width: 700px; }
+@font-face { font-family: "Lato"; src: url("fonts/Lato-Regular.ttf"); }
+
+#main-window {
+    font-family: "Lato";
+}
+
+#main-window:not([chromehidden~="toolbar"]) {
+    min-width: 930px;
+}
+
+#urlbar-container {
+    min-width: 850px;
+}
 
 .tab-background-start, .tab-background-end {
-  display: none;
+    display: none;
 }
 
 .tab-background-middle {
-  margin: 0px;
+    margin: 0px;
 }
 
 .tab-content {
-  border-color: #d0d0d0;
-  border-width: 1px 1px 0px 1px;
-  border-style: solid;
+    border-color: #d0d0d0;
+    border-width: 1px 1px 0px 1px;
+    border-style: solid;
 }
 
 .tabbrowser-tab {
-  margin: 0px 2px;
+    margin: 0 2px;
 }
 
 .tabbrowser-tab:hover > .tab-stack > .tab-background:not([visuallyselected="true"]), .tabs-newtab-button:hover {
-  background-image: none;
-}
-.tabs-newtab-button {
-  width: 30px;
-  border: 1px solid #d0d0d0;
-  -moz-margin-start: 2px;
+    background-image: none;
 }
 
+.tabs-newtab-button {
+    width: 30px;
+    border: 1px solid #d0d0d0;
+    -moz-margin-start: 2px;
+}
 
 #nav-bar .toolbarbutton-1:not([type="menu-button"]), #nav-bar .toolbarbutton-1 > .toolbarbutton-menubutton-button, #nav-bar .toolbarbutton-1 > .toolbarbutton-menubutton-dropmarker {
-  padding: 5px 2px;
-  -moz-box-pack: center;
+    padding: 5px 2px;
+    -moz-box-pack: center;
 }
 
 .findbar-button, #nav-bar .toolbarbutton-1, #nav-bar .toolbarbutton-1 > .toolbarbutton-menubutton-button {
-  -moz-appearance: none;
-  border: medium none;
-  padding: 0px;
-  background: transparent none repeat scroll 0% 0%;
+    -moz-appearance: none;
+    border: medium none;
+    padding: 0px;
+    background: transparent none repeat scroll 0% 0%;
 }
 
 #forward-button, #back-button {
-  margin-left: 0px !important;
-  border: 0px !important;
-  box-shadow: 0px 0px 0px 0px transparent !important;
-  border-radius: 0px;
-  background-color: transparent !important;
+    margin-left: 0px !important;
+    border: 0px !important;
+    box-shadow: 0px 0px 0px 0px transparent !important;
+    border-radius: 0px;
+    background-color: transparent !important;
 }
 
 window:not([chromehidden~="toolbar"]) #urlbar-wrapper {
-  -moz-margin-start: 0px;
-  clip-path: none;
+    -moz-margin-start: 0px;
+    clip-path: none;
 }
 
 /*:-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button, #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #privatebrowsing-button, #save-page-button, #switch-to-metro-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button, #panic-button, #web-apps-button, #webide-button, #loop-button, #pocket-button), #bookmarks-menu-button > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {*/
-    /*list-style-image: url("chrome://cliqzres/content/skin/Toolbar.png");*/
+/*list-style-image: url("chrome://cliqzres/content/skin/Toolbar.png");*/
 /*}*/
 
-#nav-bar, #navigator-toolbox, .tab-content, #PersonalToolbar   {
-  background-image: none !important;
-  background-color: #eee !important;
+#nav-bar, #navigator-toolbox, .tab-content, #PersonalToolbar {
+    background-image: none !important;
+    background-color: #eee !important;
 }
+
 /*======= Gabriel Changes */
 
 #urlbar {
-  max-width: 650px;
-  box-sizing: border-box;
-  border-radius: 3px !important;
-  background: #fefefe;
-  box-shadow: none !important;
-  border: 1px solid #ccc !important;
-  -moz-border-start: 1px solid #ccc !important;
+    max-width: 800px;
+    box-sizing: border-box;
+    border-radius: 3px !important;
+    background: #fefefe;
+    box-shadow: none !important;
+    border: 1px solid #ccc !important;
+    -moz-border-start: 1px solid #ccc !important;
 }
-#urlbar * { box-sizing: border-box; }
+
+#urlbar * {
+    box-sizing: border-box;
+}
 
 #urlbar[focused="true"],
 .searchbar-textbox[focused="true"] {
-  box-shadow: none !important;
-  border-color: #5ea3f9 !important;
-  -moz-border-start: 1px solid #5ea3f9 !important;
+    box-shadow: none !important;
+    border-color: #7BEBF5 !important;
+    -moz-border-start: 1px solid #7BEBF5 !important;
 }
 
 /*==== FF Color */
@@ -87,36 +102,76 @@ window:not([chromehidden~="toolbar"]) #urlbar-wrapper {
 #titlebar,
 #tab-view-deck,
 #titlebar-content {
-  background: #eaeaea;
+    background: #e0e0e0;
 }
 
+/*========== Tabs =======*/
 .tab-content {
-  border: none;
-  background: rgba(255,255,255,0.6) !important;
+    border: none;
+    background: rgba(255, 255, 255, 0.6) !important;
 }
 
 .tabbrowser-tab[visuallyselected="true"] .tab-content,
 #PersonalToolbar {
-  background: #fff !important;
+    background: #fff !important;
 }
 
+.tabbrowser-tab:not([visuallyselected="true"]):hover {
+    background: rgba(255, 255, 255, 0.7) !important;
+}
+
+
+/*======== Removes Tabs Border ==========*/
+#tabbrowser-tabs[movingtab] > .tabbrowser-tab[beforeselected]:not([last-visible-tab])::after,
+.tabbrowser-tab:not([visuallyselected]):not([afterselected-visible]):not([afterhovered]):not([first-visible-tab]):not(:hover)::before,
+#tabbrowser-tabs:not([overflow]) > .tabbrowser-tab[last-visible-tab]:not([visuallyselected]):not([beforehovered]):not(:hover)::after {
+    display: none;
+}
+
+/*========== End Tabs =========*/
+
+
 #PersonalToolbar {
-  padding-top: 7px;
-  border-top: 1px solid #eaeaea;
+    padding-top: 7px;
+    border-top: 1px solid #e0e0e0;
 }
 
 #nav-bar {
-  margin-top: 0 !important;
-  border-top-color: #fff !important;
-  background: #fff !important;
+    margin-top: 0 !important;
+    border-top-color: #fff !important;
+    background: #fff !important;
 }
 
 .tabs-newtab-button {
-  border: none !important;
+    border: none !important;
 }
 
 .tabs-newtab-button,
 #TabsToolbar > #new-tab-button,
 #TabsToolbar > toolbarpaletteitem > #new-tab-button {
-  list-style-image: url("chrome://cliqzres/content/skin/images/browser/newtab.png");
+    list-style-image: url("chrome://cliqzres/content/skin/images/browser/newtab.png");
+}
+
+#back-button {
+    -moz-image-region: rect(0px, 54px, 18px, 36px);
+}
+
+/*===== Bookmarks */
+
+toolbarbutton.bookmark-item:not(.subviewbutton):not(#bookmarks-menu-button),
+#personal-bookmarks[cui-areatype="toolbar"]:not([overflowedItem="true"]) > #bookmarks-toolbar-placeholder {
+    padding: 0 5px 1px;
+}
+
+@media (min-resolution: 2dppx) {
+    .tabs-newtab-button,
+    #TabsToolbar > #new-tab-button,
+    #TabsToolbar > toolbarpaletteitem > #new-tab-button {
+        list-style-image: url("chrome://cliqzres/content/skin/images/browser/newtab@2x.png");
+    }
+}
+@media (min-resolution: 1.1dppx) {
+    #back-button {
+        -moz-image-region: rect(0px, 104px, 36px, 72px);
+    }
 }
