--- a/cliqz@cliqz.com/chrome/skin/browser_progress.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_progress.css
@@ -94,22 +94,43 @@
 #cliqz-results .cqz-rd .cqz-ez-btns {margin-top: 19px;}
 #cliqz-results .cqz-rd-body {height: calc(100% - 52px);height: -moz-calc(100% - 52px); width: -moz-calc(100% - 70px); width: calc(100% - 70px); max-width: 700px;}
 #cliqz-results .cqz-rd-rateimg { height: 13px; transform: translateX(-1px);}
-#cliqz-results .cqz-rd-max-lines4 {white-space: normal; overflow: hidden; height: 5.6em; line-height: 1.4em; }
-#cliqz-results .cqz-rd-max-lines4:before {
-    white-space: normal; content:""; float: left; width: 5px; height: 5.6em;}
-#cliqz-results .cqz-rd-max-lines4 > *:first-child {
-    white-space: normal; float: right; width: 100%; margin-left: -5px; }
-#cliqz-results .cqz-rd-max-lines4:after {
+
+#cliqz-results .cqz-multy-lines-ellipses {
+    overflow: hidden;
+    height: 5.6em; /*4 lines*/
+    white-space: normal;
+    line-height: 1.4em;
+}
+
+#cliqz-results .cqz-multy-lines-ellipses:before {
+    content: "";
+    float: left;
+    width: 5px;
+    height: 5.6em;
+    white-space: normal;
+}
+
+#cliqz-results .cqz-multy-lines-ellipses > * {
+    float: right;
+    width: 100%;
+    margin-left: -5px;
+    white-space: normal;
+    line-height: 1.4em;
+}
+
+#cliqz-results .cqz-multy-lines-ellipses:after {
     white-space: normal;
     content: "\02026";
 
     box-sizing: content-box;
-    -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
 
-    float: right; position: relative;
-    top: -1.4em; left: 100%;
-    width: 2.5em; margin-left: -2.5em;
+    float: right;
+    position: relative;
+    top: -1.4em;
+    left: 100%;
+    width: 15px;
+    margin-left: -15px;
     padding-right: 5px;
 
     text-align: right;
@@ -118,7 +139,9 @@
     background: linear-gradient(to right, rgba(255, 255, 255, 0), white 50%, white);
 }
 
-#cliqz-results .cqz-rd-max-lines4 p{line-height: 1.4em;}
+/* ==== 3 lines ====*/
+#cliqz-results .cqz-multy-lines-ellipses.cqz-line-vis-3 { height: 4.2em; }
+#cliqz-results .cqz-multy-lines-ellipses.cqz-line-vis-3:before { height: 4.2em; }
 
 #cliqz-results .cqz-rd-info{color: #999999; padding-bottom: 7px;}
 #cliqz-results .cqz-rd-info-2{color: #999999;}
@@ -637,36 +660,34 @@
 
 /***** LOCAL MOVIE EZ ******/
 #cliqz-results .movie_container {
-  height:160px;
-  max-height:160px;
-  width: calc(100% - 35px);
-  max-width: 700px;
+    width: calc(100% - 35px);
+    max-width: 700px;
+    margin-bottom: 20px;
 }
 
-#cliqz-results .movie_poster, #cliqz-results .movie_poster_img {
-  max-width: 110px;
+#cliqz-results .movie_poster,
+#cliqz-results .movie_poster_img {
+  max-width: 80px;
   border-radius: 6px;
 }
 
 #cliqz-results .movie_poster {
-  /* position:absolute; */
-  float:left;
+    float:left;
+    margin-right: 20px;
 }
 
 #cliqz-popup #cliqz-results .movie_data {
-  margin-left: 125px;
-  height:160px;
   padding-right: 60px;
 }
 
 #cliqz-results .movie_url {
-  margin-top: 0px;
-  margin-bottom:10px;
+  margin-top: 0;
+  margin-bottom: 10px;
 }
 
 #cliqz-results .cqz-ez-title.movie_title {
+  display: block;
   margin-bottom: 10px;
-  display:block;
 }
 
 #cliqz-results .movie_description {
@@ -702,11 +723,10 @@
 }
 
 #cliqz-results .cinema-name-td, #cliqz-results .cinema-showtime-td  {
+  max-width: 100px;
+  padding: 7px 0 9px;
   font-size: 16px;
-  border-top: 1px solid #EAEAEA;
-  padding-top:5px;
-  padding-bottom:5px;
-  max-width:100px;
+  border-top: 1px solid #eaeaea;
 }
 #cliqz-results .cinema-name {
   font-size: 16px;
@@ -721,10 +741,10 @@
 }
 
 #cliqz-results .showtimes-date {
-  float:right;
+  float: right;
   margin-bottom: 10px;
-  margin-top:0px;
-  color:#CECECE;
+  margin-top: 0;
+  color: #CECECE;
 }
 
 #cliqz-results .movie-trailer-btn {
