use location in debug view for iOS and desktop

--- a/views/index.jade
+++ b/views/index.jade
@@ -16,6 +16,7 @@ html
         script(src="/tool/js/global.js")
         script(src="/tool/js/local.js")
     body
+        button#location(onclick="getLocation()") Using CLIQZ office location - Update!
         input#urlbar(autofocus="true")
         #results
         script(src="/views/js/debug.js")
